<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/customButton"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginBottom="164dp"
        android:contentDescription="@string/lion_pic"
        android:onClick="sendMessage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/zebraButton"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginBottom="296dp"
        android:contentDescription="@string/zebra_pic"
        android:onClick="sendMessage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zebra" />

    <ImageButton
        android:id="@+id/catButton"
        android:layout_width="115dp"
        android:layout_height="113dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="492dp"
        android:onClick="sendMessage"
        android:contentDescription="@string/cat_pic"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dogButton"
        app:srcCompat="@drawable/cat" />

    <ImageButton
        android:id="@+id/dogButton"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="492dp"
        android:onClick="sendMessage"
        android:scaleType="fitCenter"
        android:contentDescription="@string/dog_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shiba" />

    <ImageButton
        android:id="@+id/lionButton"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="296dp"
        android:onClick="sendMessage"
        android:scaleType="fitCenter"
        android:contentDescription="@string/lion_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="296dp"
        android:layout_height="57dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="674dp"
        android:text="@string/title"
        android:textColor="#0679D5"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Animal Sounds" />

    <TextView
        android:id="@+id/animalSound"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:textColor="#57EC2E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>